--- a/responsivo.css
+++ b/responsivo.css
@@ -1,4 +1,5 @@
-@media (max-width: 1024px){
+@media (max-width: 1214px){
+
     .menusegundario{
         display: none;
     }
@@ -8,6 +9,18 @@
     }
 
     .container1{
-        margin: none;
+        margin: 5px;
+        margin-left: 0;
+    }
+
+    .menu2{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    
+    .menu{
+        font-size: 20px;
     }
 }
