--- a/responsivo.css
+++ b/responsivo.css
@@ -20,3 +20,10 @@
         margin-bottom: 20px;
     }
 }
+
+@media (max-width: 720px){
+    .menu{
+        width: 400px;
+        font-size: 20px;
+    }
+}
