--- a/responsivo.css
+++ b/responsivo.css
@@ -26,7 +26,8 @@
         width: 400px;
         font-size: 20px;
     }
-    .container1{
+    .container1 h2{
         margin-left: 8px;
+        text-align: center;
     }
 }
