--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ a {
 }
 
 .container1 {
-    width: 800px;
+    max-width: 800px;
     height: auto;
     margin-left: 50px;
     color: #fff;
@@ -62,6 +62,7 @@ a {
 
 .container1 p {
     margin: 10px;
+    text-align: justify;
 }
 
 .menu2 {
